# octavian

./: .gitignore  CMakeLists.txt  README.md  build.sh  dockerfile  main.cpp  makefile  requirements.txt  resnet.py  test.cpp
app/: datadownloader.py  links.txt  main.py  model.py  serve.py
lib/: resnet.h  utils.h
notebooks/: prototype.ipynb
src/: resnet.h
